syntax = "proto3";
package joltify.vault;

import "joltify/vault/outbound_tx.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "joltify/vault/issue_token.proto";
import "joltify/vault/create_pool.proto";
import "joltify/vault/quota.proto";
import "joltify/vault/staking.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/joltify-finance/joltify_lending/x/vault/types";

// GenesisState defines the vault module's genesis state.
message GenesisState {
	// params defines all the paramaters of related to deposit.
	Params params = 1 [(gogoproto.nullable) = false];
	repeated OutboundTx outbound_tx_list = 5 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
	repeated IssueToken issue_token_list = 2; // this line is used by starport scaffolding # genesis/proto/stateField
	repeated CreatePool create_pool_list = 3; // this line is used by starport scaffolding # genesis/proto/stateField
    // this line is used by starport scaffolding # ibc/genesis/proto
	repeated Validators  validatorinfo_list = 6;
	repeated CreatePool latest_twoPool = 10;
	repeated StandbyPower standbypower_list=7;
	repeated cosmos.base.v1beta1.Coin feeCollected_list= 8 [
		(gogoproto.nullable) = false,
		(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
	];
	CoinsQuota coinsQuota = 9[	(gogoproto.nullable) = false];
	bool exported = 4;
}
